--- a/site/backend/gulp/scss/layout/main/_index.scss
+++ b/site/backend/gulp/scss/layout/main/_index.scss
@@ -26,6 +26,8 @@
     padding: 15px;
     position: relative;
     z-index: 1;
+    font-weight: $bold;
+
 }
 
 @include phone{
@@ -90,5 +92,82 @@
             font-size: 2rem;
             padding: 1rem 2rem;
         }
+    }
+}
+
+.prodBox {
+
+    display: inline-block;
+    width: 240px;
+    text-align: center;
+
+    .img-container {
+        height: 230px;
+        width: 200px;
+        overflow: hidden;
+        border-radius: 0px 0px 20px 20px;
+        display: inline-block;
+
+        img {
+            transform: skew(0deg, -13deg);
+            height: 250px;
+            margin: -35px 0px 0px -70px;
+            margin-left: auto;
+        }
+    }
+
+    .inner-skew {
+        display: inline-block;
+        border-radius: 20px;
+        overflow: hidden;
+        padding: 0px;
+        transform: skew(0deg, 13deg);
+        font-size: 0px;
+        margin: 30px 0px 0px 0px;
+        background: #c8c2c2;
+        height: 250px;
+        width: 200px;
+        border: 0.1rem solid $secon;
+    }
+
+    .text-container {
+        // box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
+        transition: box-shadow 0.3s;
+        padding: 120px 20px 20px 20px;
+        // border-radius: 20px;
+        border-radius: 0.8rem;  
+        background: $prin;
+        margin: -120px 0px 0px 0px;
+        line-height: 19px;
+        font-size: 14px;
+
+        &:hover{
+            box-shadow: 0px 0px 10px rgb(100,100,100);
+        }
+
+        h3 {
+            margin: 20px 0px 10px 0px;
+            color: $secon;
+            font-size: 18px;
+            }
+    }
+}
+
+.sect-p{
+    padding: 1rem 2rem 5rem 2rem;
+}
+
+.sect-content{
+    display: flex;
+    // gap: 3rem;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    row-gap: $separation;
+    align-items: center;
+}
+
+@include phone{
+    .text-container{
+        box-shadow: 0px 0px 10px rgb(100,100,100);
     }
 }
