--- a/site/backend/src/views/users/index.ejs
+++ b/site/backend/src/views/users/index.ejs
@@ -44,20 +44,23 @@
                 </section>
             </div>
 
-            <div class="center">
-                <div class="pagination">
-                    <a href="#">&laquo;</a>
-                    <a href="#">1</a>
-                    <a href="#" class="active">2</a>
-                    <a href="#">3</a>
-                    <a href="#">4</a>
-                    <a href="#">5</a>
-                    <a href="#">6</a>
-                    <a href="#">&raquo;</a>
-                </div>
-            </div>
-
         </main>
+
+        <div id="pagin-app" class="pagcontainer">  
+            <ul class="page">
+                <li class="page__btn"><span class="material-icons"><i class="fas fa-arrow-left"></i></span></li>
+                <li class="page__numbers"> 1</li>
+                <li class="page__numbers active">2</li>
+                <li class="page__numbers">3</li>
+                <li class="page__numbers">4</li>
+                <li class="page__numbers">5</li>
+                <li class="page__numbers">6</li>
+                <li class="page__dots">...</li>
+                <li class="page__numbers"> 10</li>
+                <li class="page__btn"><span class="material-icons"><i class="fas fa-arrow-right"></i></span></li>
+                </ul>
+        </div>
+
     </div>
 
     <%- include('../partials/footer') %>
