--- a/site/backend/src/views/products/index.ejs
+++ b/site/backend/src/views/products/index.ejs
@@ -33,20 +33,7 @@
             </div>
         </section>
 
-        <div id="pagin-app" class="pagcontainer">  
-            <ul class="page">
-                <li class="page__btn"><span class="material-icons"><i class="fas fa-arrow-left"></i></span></li>
-                <li class="page__numbers"> 1</li>
-                <li class="page__numbers active">2</li>
-                <li class="page__numbers">3</li>
-                <li class="page__numbers">4</li>
-                <li class="page__numbers">5</li>
-                <li class="page__numbers">6</li>
-                <li class="page__dots">...</li>
-                <li class="page__numbers"> 10</li>
-                <li class="page__btn"><span class="material-icons"><i class="fas fa-arrow-right"></i></span></li>
-                </ul>
-        </div>
+        <%- include('../partials/pagination') %> 
 
     </div>
 
