--- a/site/backend/gulp/scss/layout/products/_index.scss
+++ b/site/backend/gulp/scss/layout/products/_index.scss
@@ -109,7 +109,7 @@
         
         &__btn {
             color: $aux;
-            pointer-events: none;
+            // pointer-events: none;
         
             &.active {
                 color: $prin;
