--- a/site/backend/src/views/partials/pagination.ejs
+++ b/site/backend/src/views/partials/pagination.ejs
@@ -1,8 +1,12 @@
 <div id="pagin-app" class="pagcontainer">  
     <ul class="page">
-        <li class="page__btn" id="btn_prev"><span class="material-icons"><i class="fas fa-arrow-left"></i></span></li>
+        <li class="page__btn" id="btn_prev">
+            <a>
+                <span class="material-icons"><i class="fas fa-arrow-left"></i></span>
+            </a>
+        </li>
         <% for ( let i = 1; i <= paginat.totalPages; i++ ) { %>
-            <li class="page__numbers <% if ( paginat.numPage == i) { %><%= "  active " %><% } %>">
+            <li class="page__numbers <% if ( paginat.numPage == i ) { %><%= "  active " %><% } %>" id="<% if (i == 1) { %><%= "first_page" %><% } else if ( i == paginat.totalPages ) { %><%= "last_page" %><% } %>" >
                 <a href="/<%= paginat.string %>?page=<%= i %>">
                     <%= i %>
                 </a>
@@ -10,6 +14,10 @@
         <% } %>  
         <!-- <li class="page__dots">...</li> -->
 
-        <li class="page__btn" id="btn_next"><span class="material-icons"><i class="fas fa-arrow-right"></i></span></li>
-        </ul>
+        <li class="page__btn" id="btn_next">
+            <a>
+                <span class="material-icons"><i class="fas fa-arrow-right"></i></span>
+            </a>
+        </li>
+    </ul>
 </div>
