--- a/site/backend/src/views/users/index.ejs
+++ b/site/backend/src/views/users/index.ejs
@@ -50,5 +50,6 @@
     <%- include('../partials/pagination') %>
 
     <%- include('../partials/footer') %>
+    <script src="/js/pagination.js"></script>
 </body>
 </html>
