--- a/site/backend/gulp/scss/base/_variables.scss
+++ b/site/backend/gulp/scss/base/_variables.scss
@@ -13,7 +13,7 @@ $gray: rgb(209, 209, 209);
 $whiter: hsl(86, 85%, 95%);
 
 // Aux
-$aux: rgb(17, 226, 17);
+$aux: purple;
 
 //-----------------------
 // FONTS
